--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgeinMinutes</string>
+    <string name="app_name">Life You Wasted in Minutes</string>
     <string name="calculate_your_age">CALCULATE YOUR AGE</string>
     <string name="below">IN MINUTES</string>
     <string name="select_dob">SELECT DATE OF BIRTH</string>
